--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -1,1 +1,38 @@
 
+/* .Checkout_product
+{
+display:flex;
+
+} */
+
+
+.Checkout_basket{
+   background-color:rgb(230, 189, 22);
+   margin-top: 20px;
+   margin-bottom:50px;
+}
+.checkout_image
+{
+    height:200px;
+    width:200px;
+    object-fit: contain;
+}
+.CheckoutProduct_info
+{
+    padding-left:200px;
+    padding-bottom: 70px;
+    display:flex;
+    flex-direction: column;
+   
+}
+.CheckoutProduct_title {
+    font-size: 20px;
+    font-weight: bold;
+
+}
+.checkoutproduct_rating{
+    display: flex;
+
+}
+
+
